solved all the issues related to date range picker like added full month name,added arrow,added year,aligned buttons

--- a/components/DatePicker/datepicker.scss
+++ b/components/DatePicker/datepicker.scss
@@ -1,7 +1,10 @@
 .g-calendar {
+     hr{
+      margin-top: 0;
+     }
     .calendar-container {
       display: flex;
-  
+       
       .current-calendar,
       .next-calendar {
         flex: 1;
